webcompat/static/css/main.css
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}


/*----------Global Styles----------*/
html, body {
  height: 100%;
}
html {
   overflow-y: scroll;
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: 300;
   color: #404040;
}
nav {
  background-color: #f8c41c;
  min-height: 75px;
  padding: .5em 5em;
  clear: both;
}
.navleft {
  float: left;
}
.navright {
  float: right;
}
nav img {
  width: 60%;
}
nav li {
  display: inline;
  vertical-align: middle;
  line-height: 75px;
  padding: 0.75em;
  color: #fff;
  font-weight: 700;
  text-decoration: none;
}
nav a:hover {
  color: #000;
}
h1 {
  font-size: 3.5em;
  font-weight: 700;
}
h2 {
  font-size: 2em;
  font-weight: 600;
}
h3 {
  font-size: 1.5em;
}
h4 {
  font-size: 1.25em;
}
p {
  font-size: 1em;
}
.button {
  text-align: center;
  padding: .5em 1.75em ;
  -moz-border-radius: 7.5px;
  -webkit-border-radius: 7.5px;
  border-radius: 7.5px;
  font-size: 1.5em;
  line-height: 2em;
  text-decoration: none;
}
.btn {
  background-color: transparent;
  border: .35em solid #f8c41c;
  margin-bottom: .5em;
  padding-left: 2em;
  padding-right: 2em;
  color: #000;
  text-decoration: none !important;
  font-weight: 700;
  -webkit-border-radius: 20px;
  -moz-border-radius: 20px;
  border-radius: 20px;
}
.btn:hover {
  background-color: #f8c41c;
  color: #fff;
}
.btn-link {
  color: #000;
  font-weight: 700;
}
.btn-link:hover, .btn-link:focus {
  color: #f8c41c;
  outline: none;
}
a {
  color: #000;
  text-decoration: underline !important;
}
a:hover, a:focus {
  color: #000;
  outline: none;
}
.bold {
  font-weight: 700;
}
.divider {
  font-weight: 700;
  border-top: 5px solid #f8c41c;
  width: 30px;
  margin-left: 5em;
  color: #fff;
}
/* Wrapper for page content to push down footer */
#wrap {
  min-height: 100%;
  height: auto !important;
  height: 100%;
/* Negative indent footer by it's height */
/*margin: 0 auto -60px;*/
/* mike: commenting out because this collapses into content
   at smaller viewports*/
}
#push, footer {
  height: 60px;
}
footer {
  background-color: #ffffff;
  border-top: 5px solid #f8c41c;
  clear: both;
}
footer a {
  text-decoration: none !important;
}
footer .container {
  padding: 1em 5em 2em;
}
footer .follow {
  font-weight: 700;
}
.footerleft {
  float: left;
}
.footerright {
  float: right;
}
.footerleft li {
  display: inline;
  padding: 0.75em 0.75em 0.75em 0;
}
.footerright li {
  display: inline;
  padding: 0.75em 0 0.75em 0.75em;
}
.footerleft a {
  margin-right: 1em;
}

/*--------Flash Messages---------*/
.flash {
  position: absolute;
  top: 0;
  left:0;
  right: 0;
  opacity: 0.8;
  background-color: white;
  padding: 0.5em 1em;
  text-align: center;
  color: #000;
}

/*--------Homepage Styles--------*/
#feedback {
  background: #FBC55F;
  padding: 0.5em 0;
}
#feedback a {
  color: #fff;
  padding: 0 5em;
  text-decoration: none !important;
}
#feedback a:hover {
  text-decoration: underline !important;
}
#feedback .container {
  background-image: none !important;
}
#feedback .pull-right {
  display: inline-block;
  position: relative;
  right: 5em;
}
#feedback .pull-right a {
  padding-left: 0;
  padding-right: 2em;
}
.avatar {
  width: 20px;
  height: 20px;
  display: inline-block;
  position: absolute;
  top: 0;
  right: 0;
  border-radius: 3px;
}
#hero {
  background-color: #f8c41c;
  text-align: left;
  color: #fff;
  padding: 0;
}
#hero .container {
  background: url(../img/LightBulbHero.png) no-repeat right 100px top;
  background-origin: content-box;
}
#maintitle {
  padding: 6em 5em;
}
#maintitle h1 {
  text-shadow: -1px -1px 0px rgba(0,0,0,.25);
}
#report-bug {
  display: block;
  position: relative;
  top: 1em;
  font-size: 2em;
  color: #fff;
  text-decoration: none !important;
  -webkit-transition: top 100ms ease-out 0ms;
  -moz-transition: top 100ms ease-out 0ms;
  -o-transition: top 100ms ease-out 0ms;
  transition: top 100ms ease-out 0ms;
}
#report-bug.opened {
  top: 2em;
  -webkit-transition: top 100ms ease-out 0ms;
  -moz-transition: top 100ms ease-out 0ms;
  -o-transition: top 100ms ease-out 0ms;
  transition: top 100ms ease-out 0ms;
}
#report-bug:hover, #report-bug:focus {
  padding-left: 0;
  color: #fff;
}
#lightbulb {
  padding: 0 5em;
}
#lightbulb img {
  margin: 0 auto;
  display: block;
  height: 80%;
}
#arrow {
  height: 1.15em;
  vertical-align: middle;
}
.opened #arrow {
  -webkit-transform:rotate(90deg);
  -ms-transform:rotate(90deg);
  transform:rotate(90deg);
}
form button.btn {
  background-color: transparent;
  border: .35em solid #f8c41c;
  margin-bottom: .5em;
  padding-left: 2em;
  padding-right: 2em;
  color: #000;
  text-decoration: none !important;
  font-weight: 700;
  -webkit-border-radius: 20px;
  -moz-border-radius: 20px;
  border-radius: 20px;
}
form .btn-link, form .btn-link:hover {
    color: #000;
    font-weight: 700;
    text-decoration: underline;
}
.form-opened {
  display: block;
}
.form-closed {
  display: none;
}
/*-------Browse Issues------*/
#browse-issues-wrapper {
  background-color: #f0f0f0;
}
#browse-issues h2 {
  display: inline;
  margin-right: 0.5em;
}
.key {
  position: relative;
  bottom:0.1em;
}
.key span {
  padding: 0.3em 1em;
}
.issue {
  background-color: #fff;
  padding: 0.5em 1em;
  margin-bottom: 1em;
}
.issue-contactready {
  border-left: 5px solid #a1ebbf;
}
.issue-needs-diagnosis {
  border-left: 5px solid #ff8364;
}
.issue-closed {
  border-left: 5px solid #6fc7fa;
}
.issue-number {
  font-weight: 400;
}
.issue-title {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin-bottom:0.5em;
}
.issue-metadata {
  font-size: 12px;
}
.more-issues {
  margin-bottom: -23em;
  text-align: center;
  clear: left;
}
#my-issues h3 {
  padding-left: 15px;
  padding-right: 15px;
}
/*---Search on Github---*/
input[type=search] {
  float: left;
  padding: 2em 3em;
  background-color: transparent;
  border: none;
  cursor: pointer;
  color: #fdf3dd;
}
#howitworks, #join, #browse-issues {
  padding: 3em 5em;
}
#browse-issues {
  padding-bottom: 2em;
}
#threesteps {
  padding: 1em 0;
}
#join p {
  padding: 1em 0;
  line-height: 150%;
}
#join img {
  width: 50px;
  margin-right: 1em;
  display: table-cell;
}
#threeways {
  vertical-align: top;
}
.bignumber {
  font-size: 2em;
  font-weight: 700;
  padding: 0.2em 0.75em 0.5em 0.5em;
  display: table-cell;
}
#join img, .bignumber {
  float: left;
}
.bignumber + p, #threeways img + p {
  padding: 0.6em;
  display: table-cell;
}
/*------Internal Pages------*/
.page {
  background-color: #fff;
}
.page h2 {
    margin-bottom: 1em;
}
.page h4 {
    margin: 0.75em 0 1em;
    font-weight: 700;
}
.page p {
  line-height: 150%;
  margin-bottom: 1em;
}
.page ol {
  margin: 1.25em 0;
}
.page li {
  margin-bottom: 1em;
}
.page strong {
  font-weight: 500;
}
.maincontent {
  text-align: left;
  padding: 2em 5em;
}
/*------Forms-------*/
textarea {
  overflow: auto;
}
label, .label {
  color: #000;
  margin-bottom: 5px;
  font-weight: 700;
  font-size: inherit;
}
.label {
  padding-left: 0;
}
form.cf {
  background: #fff;
  padding: 3em 5em 2em 5em;
/*  -webkit-border-radius: 20px;
  -moz-border-radius: 20px;
  border-radius: 20px;*/
}
#new-report h2 {
  font: #fff;
  margin-left: 0;
  margin-bottom: 1em;
}
.form-control {
  -webkit-border-radius: 20px;
  -moz-border-radius: 20px;
  border-radius: 20px;
  padding: 0.5em;
}
form .button {
  margin-top: 0.25em;
  margin-bottom: 0.5em;
  padding-top: 0.25em;
  padding-bottom: 0.25em;
}
#submitanon {
  float: left;
  border: none;
}
#submitgithub {
  float: right;
  margin: 0 auto;
}
#submitdiv {
  display: block;
  font-weight: 700;
  border-top: 5px solid #f8c41c;
  width: 30px;
  margin: 1em 0 0;
  color: #fff;
  display: block;
}
.row {
  padding: .5em;
}
.row:last-child p:not(.issue-metadata) {
  margin-bottom: 0.5em;
  color: #000;
}

/* bootstrap overrides */
.radio-inline, .checkbox-inline {
  /* Hack to get Chrome 24+ to behave.
  See https://github.com/twbs/bootstrap/issues/6599 */
  white-space: nowrap;
}
.radio, .radio-inline {
  padding-left: 8px;
  margin-right: 8px;
  margin-left: 8px;
  width:100%;
  height: 34px;
}
.radio label, .radio-inline label {
  font-weight: 300;
}
/* bootstrap override */
.radio-inline + .radio-inline {
  margin-left: 8px;
}
#site-owner {
  display:block;
  text-align: left;
}
/* `ruby -e 'puts "skcah top yenoh".reverse'` */
.col-dm-12 {
  display: none !important;
}
/*------Form Validation------*/
.has-error .form-control {
  border-color: #ff0000;
}
.has-error .form-control:focus{
  border-color: #ff0000;
  -webkit-box-shadow:none;
  box-shadow:none;
}
.has-error .help-inline {
  color: #ff0000;
  float: right;
}
.has-error input {
  background: url(../img/invalid.svg) no-repeat right 50%;
  background-size: 15px;
  background-origin: content-box;
}
.no-error input {
  background: url(../img/valid.svg) no-repeat right 50%;
  background-size: 20px;
  background-origin: content-box;
}
.no-error .help-inline {
  display: none;
}
.no-error .form-control {
  border-color: #f8c41c;
}
.no-error .form-control:focus{
  border-color: #f8c41c;
  -webkit-box-shadow:none;
  box-shadow:none;
}
.disabled {
  opacity: 0.5;
}
/*------Thanks Page------*/
.thanks p {
  margin-bottom: 1.5em;
}
/*------Page Errors------*/
#returnhome {
  padding: 0;
}
/*------Social Share------*/
#twittershare {
  padding: 0;
}
/*------Media Queries------*/
@media all and (max-width: 990px) {
  .key span {
    padding: 0 0 0 0.5em;
  }
}
@media all and (max-width: 950px) {
  .bignumber {
    padding-right: 0.5em;
  }
}
@media all and (max-width: 770px) {
  #maintitle h1 {
    font-size: 3em;
  }
  .key {
    display: block;
    margin-top: 1em;
  }
  .bignumber {
    padding-bottom: 0;
  }
  footer {
    margin-left: -20px;
    margin-right: -20px;
    padding-left: 20px;
    padding-right: 20px;
  }
  footer li {
    font-size: 0.75em;
  }

  #hero .container {
    background-size: 18%;
    background-position: right 80px top -50px;
  }
}
@media all and (max-width: 600px) {
  footer .footerleft li {
    display: block;
  }
  .flourish {
    display: none;
  }

  #hero .container {
    background: none;
  }
  .submit {
    float: left;
    margin: 0 0 1em;
  }
  .col-md-6.submit, .col-md-6 button {
    width: 100%;
  }
}
@media all and (max-width: 450px) {
  .maincontent.container, footer .container, nav, form.cf {
    padding-left: 1em;
    padding-right: 1em;
  }
  #maintitle {
    padding: 3em 1em 3em;
  }
  #feedback .pull-right {
    right: 1em;
  }
  #feedback a {
    padding-right: 1em;
    padding-left: 1em;
  }
  #report-bug.opened {
    top: 1.25em;
  }
  #howitworks, #join, #browse-issues {
    padding: 2em 1em;
  }
  footer {
    margin-top: 3em;
  }
  .has-error .help-inline {
    float: none;
    display: block;
  }
}
@media all and (max-width: 375px) {
  .footerright {
    clear: left;
    float: left;
    margin-left: -10px;
  }
}

@media all and (max-width: 330px) {
  #feedback a {
    font-size: 13px;
  }
  #feedback .pull-right {
    right: 0;
  }
  #feedback .avatar {
    display: none;
  }
  #feedback .pull-right a {
    padding-right: 0 !important;
  }
}

